--- a/Web3/static/css/summary.css
+++ b/Web3/static/css/summary.css
@@ -30,184 +30,6 @@ h1 {
 }
 
 
-
-
-#container{
-  width:100%;
-  height:100%;
-  position: relative;
-  top: 200px;
-  text-align: center;
-  }
-
-/* left measure: time */
-      #time{
-        position: relative;
-        display: inline-block;
-        top: 80px;
-        left: 50px;
-        width:30%;
-        height:30%;
-        text-align: center;
-      }
-
-      #timeCircle{
-        position: relative;
-        display: inline-block;
-        top: 8%;
-        width: 180px;
-        height: 180px;
-        background-color: #bcabae;
-        box-shadow: 0px 0px 10px black;
-        border-top-left-radius: 100px;  /* 100px of height + 10px of border */
-        border-top-right-radius: 100px; /* 100px of height + 10px of border */
-        border-bottom-left-radius: 100px;  /* 100px of height + 10px of border */
-        border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
-      }
-
-
-      #timeContainer{
-        position: relative;
-        display: inline-block;
-        text-align: center;
-        top:-130px;
-      }
-
-      #totalTime{
-          position: relative;
-          font-size: 15px;
-          color: white;
-      }
-
-      #timeText{
-        position: relative;
-        font-size: 35px;
-        color: white;
-      }
-
-      #timeTextMeasure{
-        position: relative;
-        font-size: 15px;
-        color: white;
-      }
-
-
-
-
-      #speed{
-        position: relative;
-        top:100px;
-        display: inline-block;
-        width:250px;
-        height:250px;
-        text-align: center;
-      }
-
-      /* middle measure: speedometer */
-      #myCanvas{
-          position: relative;
-          /* display: inline-block; */
-          text-align: center;
-      }
-
-#speedCircle{
-    position: relative;
-    display: inline-block;
-    width: 250px;
-    height: 250px;
-    box-shadow: 0px 0px 20px black;
-    background-color: #bcabae;
-    border-top-left-radius: 200px;  /* 100px of height + 10px of border */
-    border-top-right-radius: 200px; /* 100px of height + 10px of border */
-    border-bottom-left-radius: 200px;  /* 100px of height + 10px of border */
-    border-bottom-right-radius: 200px; /* 100px of height + 10px of border */
-}
-
-
-      #speedContainer{
-        position: relative;
-        display: inline-block;
-        text-align: center;
-        top:-180px;
-      }
-
-      #totalSpeed{
-          position: relative;
-          font-size: 20px;
-          color: white;
-      }
-
-      #speedText{
-        position: relative;
-        font-size: 50px;
-        color: white;
-      }
-
-      #speedTextMeasure{
-        position: relative;
-        font-size: 20px;
-        color: white;
-      }
-
-
-
-
-
-/* right indicator: distance */
-    #distance{
-      position: relative;
-      display: inline-block;
-      top:80px;
-      right: 50px;
-      width:30%;
-      height:30%;
-      text-align: center;
-    }
-
-    #distanceCircle{
-      position: relative;
-      display: inline-block;
-      box-shadow: 0px 0px 10px black;
-      top: 8%;
-      width: 180px;
-      height: 180px;
-      background-color: white;
-      border-top-left-radius: 100px;  /* 100px of height + 10px of border */
-      border-top-right-radius: 100px; /* 100px of height + 10px of border */
-      border-bottom-left-radius: 100px;  /* 100px of height + 10px of border */
-      border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
-      background-color: #bcabae;
-    }
-
-
-    #distContainer{
-      position: relative;
-      display: inline-block;
-      text-align: center;
-      top:-130px;
-    }
-
-    #totalDist{
-        position: relative;
-        font-size: 15px;
-        color: white;
-    }
-
-    #distanceText{
-      position: relative;
-      font-size: 35px;
-      color: white;
-    }
-
-    #distanceTextMeasure{
-      position: relative;
-      font-size: 15px;
-      color: white;
-    }
-
-
-
-
 /* //pause and stop buttons// */
   #options {
     position: relative;
@@ -244,3 +66,204 @@ h1 {
         /* margin-top: 100px; */
         /* visibility: hidden; */
         }
+
+
+        #container{
+          top: 230px;
+          width:100%;
+          height:100%;
+          position: relative;
+          text-align: center;
+          }
+
+        /* left measure: time */
+            #time{
+              position: relative;
+              display: inline-block;
+              left: 50px;
+              width:30%;
+              height:30%;
+              text-align: center;
+            }
+            #timeCircle{
+              position: relative;
+              display: inline-block;
+              width: 180px;
+              height: 180px;
+              background-color: #bcabae;
+              box-shadow: 0px 0px 10px black;
+              border-top-left-radius: 100px;  /* 100px of height + 10px of border */
+              border-top-right-radius: 100px; /* 100px of height + 10px of border */
+              border-bottom-left-radius: 100px;  /* 100px of height + 10px of border */
+              border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
+            }
+            #canvasTime{
+                position: static;
+                /* display: inline-block; */
+                text-align: center;
+            }
+
+
+            #speed{
+              position: relative;
+              top: 20px;
+              display: inline-block;
+              width:250px;
+              height:250px;
+              text-align: center;
+            }
+            #speedCircle{
+                position: relative;
+                display: inline-block;
+                width: 250px;
+                height: 250px;
+                box-shadow: 0px 0px 20px black;
+                background-color: #bcabae;
+                border-top-left-radius: 200px;  /* 100px of height + 10px of border */
+                border-top-right-radius: 200px; /* 100px of height + 10px of border */
+                border-bottom-left-radius: 200px;  /* 100px of height + 10px of border */
+                border-bottom-right-radius: 200px; /* 100px of height + 10px of border */
+            }
+            #canvasSpeed{
+                position: static;
+                /* display: inline-block; */
+                text-align: center;
+            }
+
+
+        /* right indicator: distance */
+          #distance{
+            position: relative;
+            display: inline-block;
+            right: 50px;
+            width:30%;
+            height:30%;
+            text-align: center;
+          }
+          #distanceCircle{
+            position: relative;
+            display: inline-block;
+            box-shadow: 0px 0px 10px black;
+            width: 180px;
+            height: 180px;
+            background-color: white;
+            border-top-left-radius: 100px;  /* 100px of height + 10px of border */
+            border-top-right-radius: 100px; /* 100px of height + 10px of border */
+            border-bottom-left-radius: 100px;  /* 100px of height + 10px of border */
+            border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
+            background-color: #bcabae;
+          }
+          #canvasDist{
+              position: static;
+              /* display: inline-block; */
+              text-align: center;
+          }
+
+
+        /* OVERLAYING TEXTBOX */
+    #textInput{
+      width:100%;
+      height:100%;
+      position: relative;
+      text-align: center;
+      }
+
+            #timeInputBox{
+              position: relative;
+              display: inline-block;
+              top: 80px;
+              left: 50px;
+              width:30%;
+              height:30%;
+              text-align: center;
+            }
+            #timeTotal{
+              font-size: 12px;
+              color:#282e3a;
+            }
+            #timeText{
+              position: relative;
+              font-size: 35px;
+              color: #282e3a;
+            }
+            #timeTextMeasure{
+              position: relative;
+              font-size: 12px;
+              color: #282e3a;
+            }
+
+
+        /* speed text  */
+            #speedInputBox{
+              position: relative;
+              top:80px;
+              display: inline-block;
+              width:250px;
+              height:250px;
+              text-align: center;
+            }
+            #speedTotal{
+              font-size: 12px;
+              color:#282e3a;
+            }
+            #speedText{
+                  font-size: 50px;
+                  color: #282e3a;
+                  }
+            #speedTextMeasure{
+                    font-size: 12px;
+                    color: #282e3a;
+                  }
+
+
+        /* distance text  */
+
+
+            #distInputBox{
+              position: relative;
+              display: inline-block;
+              top: 80px;
+              right: 50px;
+              width:30%;
+              height:30%;
+              text-align: center;
+            }
+
+            #distTotal{
+              font-size: 12px;
+              color:#282e3a;
+            }
+
+            #distanceText{
+              font-size: 35px;
+              color: #282e3a;
+            }
+
+            #distanceTextMeasure{
+              font-size: 12px;
+              color: #282e3a;
+            }
+
+                              @-webkit-keyframes move {
+                                0% {
+                                  transform: rotate(-90deg);
+                                }
+                                50% {
+                                  transform: rotate(90deg);
+                                }
+                                100% {
+                                  transform: rotate(-90deg);
+                                }
+                              }
+
+                              #overlay{
+                                position: fixed;
+                                width: 200%;
+                                height: 2000px;
+                                margin-top: -1000px;
+                                margin-left: -200px;
+                                background-color: white;
+                                text-align: center;
+                                visibility: hidden;
+                                opacity: 0.5;
+                              }
