--- a/Web3/templates/Workout.html
+++ b/Web3/templates/Workout.html
@@ -42,7 +42,7 @@
 
     <div id="speed">
       <div id="speedCircle">
-          <canvas class="canvas" id="myCanvas" width="250" height="250">
+          <canvas class="canvas" id="canvasSpeed" width="250" height="250">
         Your browser does not support the HTML5 canvas tag.
           </canvas>
               <div id="needle">
@@ -52,7 +52,7 @@
 
     <div id="distance">
       <div id="distanceCircle">
-        <canvas class="canvas" id="myDist" width="180" height="180">
+        <canvas class="canvas" id="canvasDist" width="180" height="180">
         </canvas>
       </div>
     </div>
