--- a/Web3/templates/summary.html
+++ b/Web3/templates/summary.html
@@ -16,7 +16,6 @@
 
         <div id="options" >
           <div id="newCircle" onmouseover="hoverPause()" onmouseout="hoverOutPause()">
-            <a href="http://localhost:5000/start">
             <div id="newTriangle">
             </div>
             </a>
@@ -24,71 +23,71 @@
         </div>
 
 
-  <div id="container", class = "span">
+        <div id="container">
 
-    <div id="time">
-      <div id="timeCircle">
-        <canvas class="canvasTime" id="canvasTime" width="180" height="180">
-        </canvas>
-        <div id="timeContainer">
-          <div id="totalTime">
-            Total Time
-          </div>
-            <div id="timeText">
-              03:05
-            </div>
-            <div id="timeTextMeasure">
-             min:sec
-            </div>
-          </div>
-        </div>
-    </div>
-
-    <div id="speed">
-      <div id="speedCircle">
-          <canvas class="canvas" id="myCanvas" width="250" height="250">
-        Your browser does not support the HTML5 canvas tag.
-          </canvas>
-              <div id="needle">
+          <div id="time">
+            <div id="timeCircle">
+              <canvas class="canvasTime" id="canvasTime" width="180" height="180">
+              </canvas>
               </div>
-                <div id="speedContainer">
-                    <div id="totalSpeed">
-                        Average Speed
+          </div>
+
+          <div id="speed">
+            <div id="speedCircle">
+                <canvas class="canvas" id="canvasSpeed" width="250" height="250">
+              Your browser does not support the HTML5 canvas tag.
+                </canvas>
+                    <div id="needle">
                     </div>
-                    <div id="speedText">
-                        25
                     </div>
-                    <div id="speedTextMeasure">
-                        km/h
-                    </div>
-                </div>
-      </div>
+              </div>
+
+          <div id="distance">
+            <div id="distanceCircle">
+              <canvas class="canvas" id="canvasDist" width="180" height="180">
+              </canvas>
+            </div>
+          </div>
 
         </div>
 
-    <div id="distance">
-      <div id="distanceCircle">
-        <canvas class="canvas" id="myDist" width="180" height="180">
-        </canvas>
-        <div id="distContainer" >
-          <div id="totalDist">
-            Total Distance
-          </div>
-          <div id="distanceText">
-            100
-          </div>
-          <div id="distanceTextMeasure">
-           meters
-          </div>
-        </div>
-      </div>
-    </div>
+                  <div id="textInput">
 
+                        <div id="timeInputBox">
+                          <div id="timeTotal">
+                            Total Time
+                          </div>
+                            <div id="timeText">
+                              03:05
+                            </div>
+                            <div id="timeTextMeasure">
+                             min:sec
+                            </div>
+                        </div>
 
-    </div>
+                        <div id="speedInputBox">
+                          <div id="speedTotal">
+                            Average Speed
+                          </div>
+                            <div id="speedText">
+                              25
+                            </div>
+                            <div id="speedTextMeasure">
+                              km/h
+                            </div>
+                        </div>
 
-    <div id="overlay", onclick="continueFunction()">
-    </div>
-
+                        <div id="distInputBox">
+                          <div id="distTotal">
+                            Total Distance
+                          </div>
+                            <div id="distanceText">
+                              100
+                            </div>
+                            <div id="distanceTextMeasure">
+                             meters
+                            </div>
+                        </div>
+                  </div>
   </body>
 </html>
