--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -90,7 +90,7 @@ console.log(averageSpeedKMH);
 function initMap() {
     var map = new google.maps.Map(document.getElementById('map'), {
     zoom: 15,
-    center: locations[0];,
+    center: locations[0],
     styles: [
         {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
         {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
