--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -72,6 +72,7 @@ var distance=localStorage.getItem('Totaldistance');
 var hours = localStorage.getItem('Hours');
 var minutes = localStorage.getItem('Minutes');
 var seconds = localStorage.getItem('Seconds');
+var locations = localStorage.getItem('locations');
 var totalSeconds = ((hours*3600)+(minutes*60)+seconds);
 var averageSpeedMS = (distance/totalSeconds);
 var averageSpeedKMH = ((averageSpeedMS*3.6).toFixed(2));
@@ -80,7 +81,6 @@ var timeString = String(hours + ':' + minutes + ':' + seconds);
 var distanceText = document.getElementById("distanceText");
 var timeText = document.getElementById("timeText");
 var speedText = document.getElementById("speedText");
-var locations = document.getElementById("locations");
 distanceText.innerHTML = (distanceString);
 timeText.innerHTML = (timeString);
 speedText.innerHTML = (averageSpeedKMH);
