debug console msg

--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -88,6 +88,7 @@ speedText.innerHTML = (averageSpeedKMH);
 console.log(distance);
 console.log(distanceString);
 console.log(averageSpeedKMH);
+console.log(locations);
 
 function initMap() {
     var map = new google.maps.Map(document.getElementById('map'), {
