json stringify/parse locations array

--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -362,7 +362,7 @@
         localStorage.setItem('Hours', hours);
         localStorage.setItem('Minutes', minutes);
         localStorage.setItem('Seconds', seconds);
-        localStorage.setItem('locations',locations);
+        localStorage.setItem('locations',JSON.stringify(locations));
         summaryFunction();
       }
       </script>
