--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -72,7 +72,7 @@ var distance=localStorage.getItem('Totaldistance');
 var hours = localStorage.getItem('Hours');
 var minutes = localStorage.getItem('Minutes');
 var seconds = localStorage.getItem('Seconds');
-var locations = localStorage.getItem('locations');
+var locations = JSON.parse(localStorage.getItem('locations'));
 var totalSeconds = ((hours*3600)+(minutes*60)+seconds);
 var averageSpeedMS = (distance/totalSeconds);
 var averageSpeedKMH = ((averageSpeedMS*3.6).toFixed(2));
