--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -16,51 +16,83 @@
 
     <h1> My Workout Summary </h1>
 
-    <div id="options" >
+    <h1> My Workout Summary </h1>
 
-      <div id="newCircle" onmouseover="hoverFunction()" onmouseout="hoverOutFunction()" onClick="startPage()">
+    <div id="options" >
+      <div id="newCircle" onmouseover="hoverPause()" onmouseout="hoverOutPause()">
         <div id="newTriangle">
         </div>
+        </a>
       </div>
     </div>
 
 
-<div id="container", class = "span">
+    <div id="container">
 
-<div id="time">
-  <div id="timeCircle">
-        <p> Total Time </p>
-      <div id="timeText">
-        03:05
+      <div id="time">
+        <div id="timeCircle">
+          <canvas class="canvasTime" id="canvasTime" width="180" height="180">
+          </canvas>
+          </div>
       </div>
-      <div id="timeTextMeasure" class="subtext">
-       min:sec
+
+      <div id="speed">
+        <div id="speedCircle">
+            <canvas class="canvas" id="canvasSpeed" width="250" height="250">
+          Your browser does not support the HTML5 canvas tag.
+            </canvas>
+                <div id="needle">
+                </div>
+                </div>
+          </div>
+
+      <div id="distance">
+        <div id="distanceCircle">
+          <canvas class="canvas" id="canvasDist" width="180" height="180">
+          </canvas>
+        </div>
       </div>
+
     </div>
-</div>
 
-<div id="speed">
-  <div id="speedCircle">
-      <p> Average speed </p>
-      <div id="speedText">
-        25
-      </div>
-      <div id="speedTextMeasure" class="subtext">
-       km/h
-      </div>
-    </div>
-</div>
+              <div id="textInput">
 
-<div id="distance">
-  <div id="distanceCircle">
-  <p> Total distance </p>
-      <div id="distanceText">
-      </div>
-      <div id="distanceTextMeasure" class="subtext">
-         meters
-      </div>
-  </div>
-</div>
+                    <div id="timeInputBox">
+                      <div id="timeTotal">
+                        Total Time
+                      </div>
+                        <div id="timeText">
+                          03:05
+                        </div>
+                        <div id="timeTextMeasure">
+                         min:sec
+                        </div>
+                    </div>
+
+                    <div id="speedInputBox">
+                      <div id="speedTotal">
+                        Average Speed
+                      </div>
+                        <div id="speedText">
+                          25
+                        </div>
+                        <div id="speedTextMeasure">
+                          km/h
+                        </div>
+                    </div>
+
+                    <div id="distInputBox">
+                      <div id="distTotal">
+                        Total Distance
+                      </div>
+                        <div id="distanceText">
+                          100
+                        </div>
+                        <div id="distanceTextMeasure">
+                         meters
+                        </div>
+                    </div>
+              </div>
 
 <div id="map">
 </div>
