--- a/WorkoutApp/templates/summary.html
+++ b/WorkoutApp/templates/summary.html
@@ -17,7 +17,7 @@
     <h1> My Workout Summary </h1>
 
     <div id="options" >
-      <div id="newCircle" onmouseover="hoverPause()" onmouseout="hoverOutPause()">
+      <div id="newCircle" onmouseover="hoverPause()" onmouseout="hoverOutPause()" onClick="startPage()">
         <div id="newTriangle">
         </div>
         </a>
