--- a/Web3/static/css/summary.css
+++ b/Web3/static/css/summary.css
@@ -21,16 +21,8 @@ h1 {
   font-size: 50px;
 }
 
+/* //new workout button// */
 
-.subtext{
-  color: #282e3a;
-  position: relative;
-  font-size: 18px;
-  font-style: italic;
-}
-
-
-/* //pause and stop buttons// */
   #options {
     position: relative;
     top:20px;
@@ -68,26 +60,7 @@ h1 {
         }
 
 
-        body{
-        background: #282e3a;
-        font-family: tahoma;
-        }
-
-        p {
-          color: black;
-          text-align: center;
-          font: helvetica;
-          font-size: 30px;
-          font-style: italic;
-        }
-
-        h1 {
-          color: white;
-          text-align: center;
-          font: helvetica;
-          font-size: 50px;
-        }
-
+/* container with the three circles */
           #container{
             width:100%;
             height:100%;
@@ -96,7 +69,7 @@ h1 {
             text-align: center;
             }
 
-        /* left measure: time */
+      /* left circle: time */
               #time{
                 position: relative;
                 display: inline-block;
@@ -123,7 +96,7 @@ h1 {
                   text-align: center;
               }
 
-
+/* middle circle: speed */
               #speed{
                 position: relative;
                 display: inline-block;
@@ -148,24 +121,8 @@ h1 {
                   /* display: inline-block; */
                   text-align: center;
               }
-              #needle {
-                position: absolute;
-                width: 10px;
-                height: 100px;
-                top: 40px;
-                left: 48%;
-                background: #eca72c;
-                border-bottom-left-radius: 5px;
-                border-bottom-right-radius: 5px;
-                border-top-left-radius: 100%;
-                border-top-right-radius: 100%;
-                /* display: inline-block; */
-                -webkit-animation: move 5s infinite;
-                transform: rotate(45deg);
-                transform-origin: bottom;
-              }
 
-        /* right indicator: distance */
+    /* right circle: distance */
             #distance{
               position: relative;
               display: inline-block;
@@ -187,6 +144,7 @@ h1 {
               border-bottom-right-radius: 100px; /* 100px of height + 10px of border */
               background-color: #bcabae;
             }
+
             #canvasDist{
                 position: static;
                 /* display: inline-block; */
@@ -194,12 +152,19 @@ h1 {
             }
 
 
-        /* OVERLAYING TEXTBOX */
+        /* OVERLAYING TEXTBOX - it is an overlay so there is no disrubtion with the js code for the blue gradient circles below*/
+        /* color of the top text (avere/total) */
+        .totalText{
+          font-size: 15px;
+          color: white;
+        }
+
             #textInput{
               width:100%;
               height:100%;
               position: relative;
               text-align: center;
+              top: -20px;
               }
 
               #timeInputBox{
@@ -214,7 +179,7 @@ h1 {
 
               #timeText{
                 position: relative;
-                font-size: 35px;
+                font-size:45px;
                 color: white;
               }
 
@@ -228,7 +193,7 @@ h1 {
         /* speed text  */
               #speedInputBox{
                 position: relative;
-                top:80px;
+                top:50px;
                 display: inline-block;
                 width:250px;
                 height:250px;
@@ -238,7 +203,7 @@ h1 {
               #speedText{
                     position: relative;
                     display: inline-block;
-                    font-size: 35px;
+                    font-size: 45px;
                     color: white;
                     }
 
@@ -262,7 +227,7 @@ h1 {
 
               #distanceText{
                 position: relative;
-                font-size: 35px;
+                font-size: 45px;
                 color: white;
               }
 
