--- a/WorkoutApp/templates/Workout.html
+++ b/WorkoutApp/templates/Workout.html
@@ -97,7 +97,7 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDujaeWrLEEsvjjXTAXrACL0AjP9iAKQRk&libraries=drawing&callback=initMap" async defer></script>
     <script type="text/javascript" charset="utf-8">
-        var socket = io.connect('http://localhost:3001');
+        var socket = io();
 
         //Distance & Speed
         var totalDis = 0;
