--- a/webPage.css
+++ b/webPage.css
@@ -2,8 +2,10 @@ body {
   background-color: powderblue;
 }
 h1 {
+  text-align: center;
   color: blue;
 }
 p {
   color: red;
+  text-align: center;
 }
