--- a/webPage.css
+++ b/webPage.css
@@ -11,7 +11,7 @@ Lightgrey: #bcabae
 body {
   font-family: Arial;
   padding: 20px;
-  background: #f1f1f1;
+  background: #282e3a;
 }
 
 /* Header/Blog Title */
@@ -19,20 +19,20 @@ body {
   padding: 30px;
   font-size: 40px;
   text-align: center;
-  background: white;
+  background: #bcabae;
 }
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
   float: left;
-  width: 75%;
+  width: 60%;
 }
 
 /* Right column */
 .rightcolumn {
   float: left;
-  width: 25%;
+  width: 40%;
   padding-left: 20px;
 }
 
