--- a/webPage.css
+++ b/webPage.css
@@ -23,14 +23,13 @@ body {
 }
 
 h2{
-  color: white;
+  color: #282e3a;
   font-size: 30px;
 }
 h3{
-  color: white;
+  color: #bcabae;
   font-size: 20px;
 }
-
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
