--- a/webPage.css
+++ b/webPage.css
@@ -27,11 +27,17 @@ h2{
   color: #282e3a;
   font-size: 30px;
 }
+
 h3{
   color: #bcabae;
   font-size: 20px;
 }
 
+p{
+  font-size: 16px;
+  text-align: justify;
+  color: #bcabae;
+}
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
