--- a/webPage.css
+++ b/webPage.css
@@ -11,7 +11,7 @@ Lightgrey: #bcabae
 body {
   font-family: Helvetica;
   padding: 20px;
-  background: #282e3a;
+  background: url(pcp_images/iot.jpg);
 }
 
 /* Header/Blog Title */
