--- a/webPage.css
+++ b/webPage.css
@@ -11,7 +11,7 @@ Lightgrey: #bcabae
 body {
   font-family: Helvetica;
   padding: 20px;
-  background: url(pcp_images/iot.jpg);
+  background: #282e3a;
 }
 
 /* Header/Blog Title */
@@ -19,7 +19,7 @@ body {
   padding: 30px;
   font-size: 40px;
   text-align: center;
-  background: white;
+  background: url(pcp_images/iot.jpg);
   visibility: 0.2;
 }
 
