--- a/webPage.css
+++ b/webPage.css
@@ -12,7 +12,7 @@ body {
   font-family: Helvetica;
   padding: 20px;
   background: url(pcp_images/web.jpg);
-  background-repeat: repeat-y;
+  background-repeat: repeat;
 }
 
 /* Header/Blog Title */
