--- a/webPage.css
+++ b/webPage.css
@@ -11,7 +11,7 @@ Lightgrey: #bcabae
 body {
   font-family: Helvetica;
   padding: 20px;
-  background: white;
+  background: #282e3a;
 }
 
 /* Header/Blog Title */
@@ -74,7 +74,7 @@ p{
 
 /* Add a card effect for articles */
 .card {
-  background-color: #282e3a;
+  background-color: white;
   padding: 20px;
   margin-top: 20px;
 }
