--- a/webPage.css
+++ b/webPage.css
@@ -19,7 +19,7 @@ body {
   padding: 30px;
   font-size: 40px;
   text-align: center;
-  background: url(pcp_images/web.jpg);
+  background: url(pcp_images/web3.jpg);
   background-repeat: repeat;
 }
 
