--- a/webPage.css
+++ b/webPage.css
@@ -29,7 +29,7 @@ body {
   font-size: 40px;
   height: 400px;
   text-align: center;
-  background: url(pcp_images/web4.jpg);
+  background: #bcabae;
   background-repeat: repeat;
 }
 
