--- a/webPage.css
+++ b/webPage.css
@@ -7,6 +7,9 @@ red: #ad343e
 Lightgrey: #bcabae
 */
 
+/* url(pcp_images/web4.jpg) */
+
+
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
